@@ -1,3 +1,8 @@
+2025-08-19  Zhengyi Fu  <i@fuzy.me>
+
+	* site-lisp/tui/tui.el (tui-recentf, tui-switch-project): Redirect
+	error messages to stderr.
+
 2025-08-18  Zhengyi Fu  <i@fuzy.me>
 
 	* site-lisp/good-doc.el (good-doc--local-docs): Fix infinite loop.
